# BaskentME_GraduationProject_DragCoefficient

./: .gitignore  CLAUDE.md  README.md  basler.md  calibration.py  camera_interface.py  detector.py  diagnose_camera.py  main.py  optik.md  physics.py  pyproject.toml  requirements.txt  sunum.md  tracker.py
ui/: calibration_mixin.py  export_mixin.py  panels.py  results_mixin.py  settings_mixin.py  source_mixin.py  theme.py  tracking_mixin.py  video_loop_mixin.py  widget_helpers.py
